sample/msvc/error/c2092.cpp
// C2092.cpp
typedef void (F) ();
typedef F AT[10];   // C2092
